tests/should_fail/data_save_bad_path.nv
module main

// SHOULD FAIL: save to a path that doesn't exist (nested dirs)
Data::save("/nonexistent/deeply/nested/path/data.json", 42)
